--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 	font-weight: bolder;
 }
 body {
-    min-height: 110vh;
+    max-height: 100vh;
     background-image: url('background.jpg');
      background-position: center; 
      background-repeat: no-repeat;
@@ -103,7 +103,7 @@ h4{
 	border-radius: 0px 20px;
 }
 .myskill{
-	 font-size: 14px;
+	font-size: 14px;
 	color: #c3c3b9;
     text-transform: uppercase;
     display: flex;
@@ -143,4 +143,100 @@ h4{
 }
 a:hover{
 	text-decoration: none;
+}
+
+.aboutme{
+	background: rgba(52, 57, 61, .5);
+	padding:20px;
+	position: fixed;
+	top: 120px;
+	left: 35%;
+	width: 30%;
+	border: 2px solid #5bc2cc;
+
+}
+
+
+/*close btn*/
+.snip1582 {
+  background: rgba(52, 57, 61, .5);
+  border: none;
+  color: #5bc2cc;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1em;
+  margin: 15px 40px;
+  outline: none;
+  padding: 12px 40px 10px;
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 700;
+	margin-left: 120px;
+}
+
+.snip1582:before,
+.snip1582:after {
+  border-color: transparent;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+  border-style: solid;
+  border-width: 0;
+  content: "";
+  height: 24px;
+  position: absolute;
+  width: 24px;
+}
+
+.snip1582:before {
+  border-color: #5bc2cc;
+  border-top-width: 2px;
+  left: 0px;
+  top: -5px;
+}
+
+.snip1582:after {
+  border-bottom-width: 2px;
+  border-color: #5bc2cc;
+  bottom: -5px;
+  right: 0px;
+}
+
+.snip1582:hover,
+.snip1582.hover {
+	background: rgba(52, 57, 61, .5);
+}
+
+.snip1582:hover:before,
+.snip1582.hover:before,
+.snip1582:hover:after,
+.snip1582.hover:after {
+  height: 100%;
+  width: 100%;
+}
+
+.aboutmecon{
+	color: #5bc2cc;
+	position: absolute;
+	left: 80%;
+}
+
+.contactmehead{
+	color: #5bc2cc;
+	font-size: 10px; 
+}
+.mail{
+	font-weight: bolder !important;
+	color: #c3c3b9;
+	font-size: 13px;
+}
+label{
+	color: #5bc2cc;
+}
+.form-control{
+	background: rgba(52, 57, 61, .5);
+	color: #5bc2cc !important;
+}
+.form-control:focus{
+	background: rgba(52, 57, 61, .5);
 }
