--- a/main.css
+++ b/main.css
@@ -240,3 +240,135 @@ label{
 .form-control:focus{
 	background: rgba(52, 57, 61, .5);
 }
+
+/*slide down*/
+.slideDown{
+  animation-name: slideDown;
+  -webkit-animation-name: slideDown;  
+
+  animation-duration: 1s; 
+  -webkit-animation-duration: 1s;
+
+  animation-timing-function: ease;  
+  -webkit-animation-timing-function: ease;  
+
+  visibility: visible !important;           
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+  }
+  50%{
+    transform: translateY(8%);
+  }
+  65%{
+    transform: translateY(-4%);
+  }
+  80%{
+    transform: translateY(4%);
+  }
+  95%{
+    transform: translateY(-2%);
+  }     
+  100% {
+    transform: translateY(0%);
+  }   
+}
+
+@-webkit-keyframes slideDown {
+  0% {
+    -webkit-transform: translateY(-100%);
+  }
+  50%{
+    -webkit-transform: translateY(8%);
+  }
+  65%{
+    -webkit-transform: translateY(-4%);
+  }
+  80%{
+    -webkit-transform: translateY(4%);
+  }
+  95%{
+    -webkit-transform: translateY(-2%);
+  }     
+  100% {
+    -webkit-transform: translateY(0%);
+  } 
+}
+.contactcon{
+  color: #5bc2cc;
+	position: absolute;
+  left: 85%;
+  top:10px;
+  cursor: pointer;
+}
+footer{
+  background: rgba(52, 57, 61, .7);
+
+  text-align: center;
+  font-size: 20px;
+  margin-top: 40px;
+}
+
+
+/*mobile*/
+@media only screen and (max-width: 600px) {
+  #navbtn{
+    position: absolute;
+    top: -35px;
+    color: #5bc2cc;
+    right: 10px;
+  }
+  .dataleft{
+    width: 100% !important;
+    display: block;
+  }
+  .dataright{
+    width: 100% !important;
+    display: block;
+    margin-left: 0px;
+    margin-top: 50px;
+    background-color: beige;
+  }
+  .datarighthead{
+    left: 20px;
+    width: 150px;
+  }
+  .frontend {
+    position: relative;
+    background: rgb(37, 43, 49);
+    margin-bottom: 5px;
+    padding: 5px;
+    border-radius: 20px 0px;
+}
+.backend {
+  position: relative;
+  background: rgb(37, 43, 49);
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 20px 0px;
+}
+.aboutme{
+  background: rgb(108, 116, 119);
+    padding: 20px;
+    position: fixed;
+    top: 20px;
+    left: 0%;
+    width: 100%;
+    border: 2px solid #5bc2cc;
+}
+footer{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
+}
+.datalefthead {
+  background: rgba(52, 57, 61, .7);
+  color: #c3c3b9;
+  padding: 20px 0px;
+  margin-bottom: 10px;
+  border: 2px solid #5bc2cc;
+  margin-top: -20px;
+}
+}
