--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ body {
     padding: 20px;
     margin-bottom: 10px;
     border: 2px solid #5bc2cc;
+    border-radius: 20px 0px;
 }
 h4{
 	color:#5bc2cc !important;
@@ -79,6 +80,8 @@ h4{
     align-items: center;
     padding-left: 20px;
     cursor: pointer;
+    border-radius: 20px 0px;
+    border:1px solid;
 }
 .mywork:hover{
 	border: 2px solid #5bc2cc;
@@ -325,6 +328,13 @@ footer{
 
 /*mobile*/
 @media only screen and (max-width: 600px) {
+  body {
+     background-position:left top; 
+}
+.mainbody{
+  margin: 0px 10px;
+  margin-top: 40px;
+}
   #navbtn{
     position: absolute;
     top: -35px;
@@ -340,7 +350,6 @@ footer{
     display: block;
     margin-left: 0px;
     margin-top: 50px;
-    background-color: beige;
   }
   .datarighthead{
     left: 20px;
@@ -381,5 +390,6 @@ footer{
   margin-bottom: 10px;
   border: 2px solid #5bc2cc;
   margin-top: -20px;
+  border-radius: 20px 0px;
 }
 }
