--- a/main.css
+++ b/main.css
@@ -84,10 +84,12 @@ h4{
     border:1px solid;
 }
 .mywork:hover{
-	border: 2px solid #5bc2cc;
-    width: 330px;
-    margin-left: 30px;
-    transition: ease 1s;
+  border: 2px solid #5bc2cc;
+  width: 330px;
+  margin-left: 30px;
+  transition: ease .5s;
+  background: #5bc2cc;
+  color: white;
 }
 
 .dataright{
